--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,181 @@
-.App {
-  text-align: center;
+/* .home-background {
+  position: relative;
+  height: 700px;
+  display: block;
+  background-image: linear-gradient(45deg,
+      rgb(51 43 43 / 75%),
+      rgb(20 19 20 / 61%)), url("https://miro.medium.com/v2/resize:fit:1400/1*QDQvlCg420lzRElCK4AYhw.png");
+  max-height: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+} */
+
+.home-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  /* 배경 이미지가 컨텐츠 위에 나타나도록 설정 */
+
+  background-image: linear-gradient(45deg,
+      rgb(51 43 43 / 75%),
+      rgb(20 19 20 / 61%)), url("https://miro.medium.com/v2/resize:fit:1400/1*QDQvlCg420lzRElCK4AYhw.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.home-container {
+  width: 1200px;
+  margin: 0px auto 0px auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.header {
+  height: 50px;
+  width: 1100px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding: 10px;
+  margin-bottom: 10px;
+
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+  font-size: 50px;
+  font-weight: 700;
+  color: rgb(18, 78, 89);
+}
+
+.input-box {
+  background-color: rgba(44, 40, 40, 0.921);
+  border-radius: 6px;
+
+  height: 100px;
+  width: 1100px;
+
+  padding-left: 30px;
+  padding-right: 30px;
+
+  color: white;
+  font-size: 25px;
+  font-weight: 800;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.input-box>input {
+  height: 40px;
+  width: 280px;
+
+  margin-right: auto;
+  padding-left: 10px;
+
+  border-radius: 7px;
+  border: none;
+
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.input-box>Button {
+  width: 180px;
+  height: 45;
+  padding: 10px;
+
+  background-color: rgb(71, 163, 182);
+
+  border: none;
+  border-radius: 5px;
+
+  color: white;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.input-box>Button:hover {
+  width: 180px;
+  height: 45;
+  padding: 10px;
+
+  border: none;
+  border-radius: 5px;
+
+  font-size: 22px;
+  font-weight: 900;
+  color: white;
+  background-color: red;
+}
+
+h1 {
+  margin-right: 1000px;
+  margin-bottom: 15px;
+
+  font-size: 30px;
+  font-weight: 800;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Working-body {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+
+  padding-left: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-container {
+  width: 350px;
+  height: 200px;
+  border: 5px solid white;
+  border-radius: 10px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 20px;
+  font-weight: 800;
+  color: white;
+}
+
+.button-container>Button {
+  width: 100px;
+  height: 40;
+  padding: 10px;
+  margin: 10px;
+
+  background-color: red;
+
+  border: none;
+  border-radius: 5px;
+
+  color: white;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.button-container>Button:hover {
+  width: 100px;
+  height: 40;
+  padding: 10px;
+  margin: 10px;
+
+  background-color: black;
+
+  border: none;
+  border-radius: 5px;
+
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
 }
